dapr-distributed-calendar/open-cost/azure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencost-azure-ingress
  namespace: opencost
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx-class
  rules:
  - http:
      paths:
      - path: /opencost(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: opencost
            port:
              number: 9090
